--- a/lesson_2.ipynb
+++ b/lesson_2.ipynb
@@ -952,6 +952,106 @@
    ],
    "outputs": [],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "# isvesti visus skaicius nuo 1 iki 100, kurie dalinasi i6 3 be liekanos\r\n",
+    "for number in range(1,101):\r\n",
+    "    if number % 3 == 0: # jei skaiciu dalinant is 3 liekana == 0\r\n",
+    "        print(number)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3\n",
+      "6\n",
+      "9\n",
+      "12\n",
+      "15\n",
+      "18\n",
+      "21\n",
+      "24\n",
+      "27\n",
+      "30\n",
+      "33\n",
+      "36\n",
+      "39\n",
+      "42\n",
+      "45\n",
+      "48\n",
+      "51\n",
+      "54\n",
+      "57\n",
+      "60\n",
+      "63\n",
+      "66\n",
+      "69\n",
+      "72\n",
+      "75\n",
+      "78\n",
+      "81\n",
+      "84\n",
+      "87\n",
+      "90\n",
+      "93\n",
+      "96\n",
+      "99\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "source": [
+    "suma = 0  # gauti suma pirmu 50 skaiciu tik tada, jei nauja einama suma bus lygine\r\n",
+    "for number in range(1,51):\r\n",
+    "    if (suma + number) % 2 == 0:\r\n",
+    "        suma += number # neaisku kodel taip. ar suma ne visada 0?\r\n",
+    "print(suma)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "650\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "for _ in range(10):  # _ naudojam, kai to naujo kintamojo niekur neplanuojam naudoti toliau\r\n",
+    "    print('coding school')   # kodel tada 10 kartu paraso irasyta teksta?"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "coding school\n",
+      "coding school\n",
+      "coding school\n",
+      "coding school\n",
+      "coding school\n",
+      "coding school\n",
+      "coding school\n",
+      "coding school\n",
+      "coding school\n",
+      "coding school\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
