--- a/lesson_3.ipynb
+++ b/lesson_3.ipynb
@@ -156,10 +156,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "source": [
-    "car = {\r\n",
-    "    \"brand\":\"Ford\",\r\n",
-    "    \r\n",
+    "car = {'brand' : 'Ford',\r\n",
+    "'model' : 'Mustang',\r\n",
+    "'year' : '1964'\r\n",
     "}"
    ],
    "outputs": [],
@@ -167,33 +174,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "source": [
-    "print(len(car)\r\n",
-    "car['year'] = 2020"
+    "print(len(car))\r\n",
+    "car['year'] = '2020'\r\n",
+    "print(car)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3\n",
+      "{'brand': 'Ford', 'model': 'Mustang', 'year': '2020'}\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "source": [
     "car.update({'color' :'red', 'used' : True})\r\n",
     "print(car)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'brand': 'Ford', 'model': 'Mustang', 'year': '2020', 'color': 'red', 'used': True}\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "source": [
-    "car.pop('brand')\r\n",
-    "car['year'] = None\r\n",
-    "print(car)"
+    "car1 = {\r\n",
+    "\"brand\": \"Ford\",\r\n",
+    "\"year\": 1992,\r\n",
+    "‘color’ = ‘red’\r\n",
+    "‘used’ = True\r\n",
+    "}\r\n",
+    "car1.pop('brand')\r\n",
+    "car1['year'] = None\r\n",
+    "print(car1)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid character '‘' (U+2018) (Temp/ipykernel_1888/3573488817.py, line 4)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\MOKYTO~1\\AppData\\Local\\Temp/ipykernel_1888/3573488817.py\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    ‘color’ = ‘red’\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid character '‘' (U+2018)\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
