--- a/additional.ipynb
+++ b/additional.ipynb
@@ -100,13 +100,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "source": [
     "x = 13\r\n",
@@ -266,9 +259,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 4,
+   "source": [
+    "suma = 0\r\n",
+    "\r\n",
+    "for x in range(1, 61):\r\n",
+    "    suma = suma + x\r\n",
+    "print(suma)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1830\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
