--- a/additional.ipynb
+++ b/additional.ipynb
@@ -277,13 +277,123 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "# Iterating through a string Using for Loop\r\n",
+    "# we want to separate the letters of the word human and add the letters as items of a list\r\n",
+    "\r\n",
+    "h_letters = []\r\n",
+    "\r\n",
+    "for letter in 'Human':\r\n",
+    "    h_letters.append(letter)\r\n",
+    "\r\n",
+    "print(h_letters)\r\n",
+    "\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['H', 'u', 'm', 'a', 'n']\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "source": [
+    "# greitesnis būdas: list comprehensive\r\n",
+    "\r\n",
+    "all_letters = [letter for letter in 'Human']\r\n",
+    "print(all_letters)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['H', 'u', 'm', 'a', 'n']\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
+    "double_number = lambda x: x * 2\r\n",
+    "print(double_number(x = int(input('nurodyti skaičių'))))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "90\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "source": [
+    "# išrinkti iš sąrašo tik lyginius skaičius ir sudaryti iš jų naują sąrašą\r\n",
+    "\r\n",
+    "my_list = [1, 4, 7, 2, 15, 22, 5, 18, 46]\r\n",
+    "\r\n",
+    "new_list = list(filter(lambda x: (x%2 == 0), my_list))\r\n",
+    "print(new_list)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[4, 2, 22, 18, 46]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "source": [
+    "def my_func(a, b):\r\n",
+    "    return a + b \r\n",
+    "x = map(my_func, ('apple', 'banan', 'cherry'), ('orange', 'lemon', 'pineapple'))\r\n",
+    "print(x)\r\n",
+    "print(list(x))\r\n",
+    "\r\n",
+    "# dar pasiaiškinti apie map"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<map object at 0x0000021A183BFBB0>\n",
+      "['appleorange', 'bananlemon', 'cherrypineapple']\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.9.2",
+   "version": "3.9.6",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -295,10 +405,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.2 64-bit"
+   "display_name": "Python 3.9.6 64-bit"
   },
   "interpreter": {
-   "hash": "28a8d0d51acbb5ec547b80c50a76f865b7f5e8a6e570f781e88891989fcd299d"
+   "hash": "1d0febc49e1fc15a3a396940b992e1b6cab9d0e3b3ca076f5f78bec92a9a951d"
   }
  },
  "nbformat": 4,
