--- a/homework.ipynb
+++ b/homework.ipynb
@@ -590,13 +590,117 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "4 PASKAITA"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "source": [
+    "def function_1(my_string):\r\n",
+    "    nums = 0\r\n",
+    "    letters = 0\r\n",
+    "    symbols = 0\r\n",
+    "    for x in my_string:\r\n",
+    "        if x.isalpha():\r\n",
+    "            letters += 1\r\n",
+    "        elif x.isdigit():\r\n",
+    "            nums += 1\r\n",
+    "        elif x != (\" \"):\r\n",
+    "            symbols += 1\r\n",
+    "    print(f'There are {letters} letters, {nums} number and {symbols} symbols. The space is not the symbol.')\r\n",
+    "\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "source": [
+    "function_1('vienas 2 ??')"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "There are 6 letters, 1 numbers and 2 symbols. The space is not the symbol.\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "source": [
+    "steps_list = []\r\n",
+    "\r\n",
+    "def function_2(a, b, c):\r\n",
+    "    steps_list = list(range(a, b, c))\r\n",
+    "    print(steps_list)\r\n",
+    "\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "source": [
+    "function_2(10, 100, 5)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "source": [
+    "def list_1(list):\r\n",
+    "    result = max(list) - min(list)\r\n",
+    "    print(result)\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "source": [
+    "list_1([1, 5, 6, 10, 4])"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.9.2",
+   "version": "3.9.6",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -608,10 +712,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.2 64-bit"
+   "display_name": "Python 3.9.6 64-bit"
   },
   "interpreter": {
-   "hash": "28a8d0d51acbb5ec547b80c50a76f865b7f5e8a6e570f781e88891989fcd299d"
+   "hash": "1d0febc49e1fc15a3a396940b992e1b6cab9d0e3b3ca076f5f78bec92a9a951d"
   }
  },
  "nbformat": 4,
