--- a/lesson_4.ipynb
+++ b/lesson_4.ipynb
@@ -168,27 +168,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "source": [
-    "def (mano_funkcija( *args):\r\n",
+    "def mano_funkcija( *args):\r\n",
     "    my_dict = {1: 0, 2: 0, 3: 0, 4: 0, 5:0}\r\n",
     "    for number in range(1, 11):\r\n",
     "        for input_number in args:\r\n",
     "             if input_number % number == 0:\r\n",
     "                 my_dict[number] +=1\r\n",
     "\r\n",
-    "return my_dict\r\n"
+    "    return my_dict\r\n"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "source": [
-    "result_dict = mano_funkcija(1, 2, 65, ) # reikia pabaigt"
+    "result_dict = mano_funkcija(1, 2, 65) # reikia pabaigt\r\n",
+    "print(result_dict)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{1: 3, 2: 1, 3: 0, 4: 0, 5: 1}\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -275,12 +284,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "source": [
-    "def functionExcercise(list_1, list_2):\r\n",
+    "def function_Excercise(list_1, list_2):\r\n",
     "    list_1 = [x for x in list_1 if x <= 10]\r\n",
     "    print(list_1)\r\n",
-    "    list_2 = [ x for x in list_2 if abs(x) > 9]\r\n",
+    "    list_2 = [x for x in list_2 if abs(x) > 9]\r\n",
     "    print(list_2)\r\n",
     "    return sum(list_1) * sum(list_2)\r\n",
     "    \r\n",
@@ -291,20 +300,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "source": [
-    "print(functionExercise([10,9,6,16,15,55,2,7],[20,642,33,76,9,7,2]))"
+    "function_Exercise([10,9,6,16,15,55,2,7], [20,642,33,76,9,7,2])"
    ],
    "outputs": [
     {
      "output_type": "error",
      "ename": "NameError",
-     "evalue": "name 'functionExercise' is not defined",
+     "evalue": "name 'function_Exercise' is not defined",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\MOKYTO~1\\AppData\\Local\\Temp/ipykernel_4304/2381310250.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfunctionExercise\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m16\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m15\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m55\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m642\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m33\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m76\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'functionExercise' is not defined"
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5572/3487800369.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfunction_Exercise\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m16\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m15\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m55\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m642\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m33\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m76\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'function_Exercise' is not defined"
      ]
     }
    ],
@@ -312,37 +321,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "source": [
     "def Skaiciuokle(ilgis, plotis, aukstis, shape):\r\n",
     "    result_dict = {'perimetras' : None, 'plotas' : None, 'turis' : None}\r\n",
     "    if shape == 'kubas':\r\n",
-    "       result_dict['parametras']  = ilgis + plotis + aukstis\r\n",
+    "       result_dict['perimetras']  = ilgis + plotis + aukstis\r\n",
     "       result_dict['plotas'] = ilgis + plotis * 6\r\n",
     "       result_dict['turis'] = ilgis * plotis * ilgis\r\n",
     "    # elif\r\n",
     "    else:\r\n",
-    "        print(f'{figura {forma} neegzistuoja duomenu bazeje.}')\r\n",
+    "        print(f'figura {shape} neegzistuoja duomenu bazeje')\r\n",
     "    return result_dict\r\n",
     "\r\n"
    ],
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "f-string: invalid syntax (Temp/ipykernel_4304/1055273640.py, line 9)",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\MOKYTO~1\\AppData\\Local\\Temp/ipykernel_4304/1055273640.py\"\u001b[1;36m, line \u001b[1;32m9\u001b[0m\n\u001b[1;33m    print(f'{figura {forma} neegzistuoja duomenu bazeje.}')\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m f-string: invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "source": [
-    "Skaciuokle(ilgis=4, plotis=3, aukstis=5, forma='kubas')"
+    "Skaciuokle(ilgis = 4, plotis = 3, aukstis = 5, shape = 'kubas')"
    ],
    "outputs": [
     {
@@ -352,7 +352,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\MOKYTO~1\\AppData\\Local\\Temp/ipykernel_4304/91556559.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mSkaciuokle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0milgis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mplotis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maukstis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mforma\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'kubas'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5572/925705429.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mSkaciuokle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0milgis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mplotis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maukstis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshape\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'kubas'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m: name 'Skaciuokle' is not defined"
      ]
     }
@@ -364,7 +364,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.9.2",
+   "version": "3.9.6",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -376,10 +376,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.2 64-bit"
+   "display_name": "Python 3.9.6 64-bit"
   },
   "interpreter": {
-   "hash": "28a8d0d51acbb5ec547b80c50a76f865b7f5e8a6e570f781e88891989fcd299d"
+   "hash": "1d0febc49e1fc15a3a396940b992e1b6cab9d0e3b3ca076f5f78bec92a9a951d"
   }
  },
  "nbformat": 4,
