--- a/homework.ipynb
+++ b/homework.ipynb
@@ -599,6 +599,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "1 užduotis:"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "source": [
@@ -637,6 +644,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "2 užduotis:"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "source": [
@@ -645,7 +659,10 @@
     "def function_2(a, b, c):\r\n",
     "    steps_list = list(range(a, b, c))\r\n",
     "    print(steps_list)\r\n",
-    "\r\n"
+    "\r\n",
+    "\r\n",
+    "#def function_2(a, b, c):\r\n",
+    "    #return list(range(a, b, c))\r\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -669,28 +686,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "source": [
-    "def list_1(list):\r\n",
-    "    result = max(list) - min(list)\r\n",
-    "    print(result)\r\n"
+    "#def skaiciu_kurejas(start, stop, step):\r\n",
+    "  #  result = []\r\n",
+    "   # while current < stop:\r\n",
+    "     #   result."
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "3 užduotis:"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "source": [
+    "def list_1(input_list):\r\n",
+    "    result = max(input_list) - min(input_list)\r\n",
+    "    return result\r\n"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "source": [
     "list_1([1, 5, 6, 10, 4])"
    ],
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "9\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
     }
    ],
    "metadata": {}
