--- a/homework.ipynb
+++ b/homework.ipynb
@@ -325,9 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "sort"
-   ],
+   "source": [],
    "outputs": [],
    "metadata": {}
   },
@@ -732,6 +730,241 @@
      "execution_count": 2
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    " 5 PASKAITA"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "1. Atsitiktinis slaptažodis"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "import random\r\n",
+    "import string\r\n",
+    "\r\n",
+    "def slaptazodzioGeneratorius():\r\n",
+    "    ilgis = int(input('Įveskite norimą slaptažodžio ilgį'))\r\n",
+    "    #naudojami_simboliai = string.ascii_letters + string.digits + string.punctuation\r\n",
+    "    naudojami_simboliai = string.printable\r\n",
+    "    #slaptazodis = []\r\n",
+    "    slaptazodis = ''\r\n",
+    "    for simbolis in range(ilgis):\r\n",
+    "        #slaptazodis.append(random.choice(naudojami_simboliai))\r\n",
+    "        slaptazodis += random.choice(naudojami_simboliai)\r\n",
+    "    #return ''. join(slaptazodis)\r\n",
+    "    return slaptazodis\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "print('Jusu slaptazodis yra:' , slaptazodzioGeneratorius())\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Jusu slaptazodis yra: VASq\"_\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "\r\n",
+    "def n_neighbor_sum(list_1, k):\r\n",
+    "    suma = sum(list_1 [:k] )\r\n",
+    "    for idx in range(len(list_1[:-k])):\r\n",
+    "        tarpine_suma = sum(list_1[ idx : idx + k])\r\n",
+    "        print(tarpine_suma)\r\n",
+    "        if suma < tarpine_suma:\r\n",
+    "            suma = tarpine_suma\r\n",
+    "    return suma\r\n",
+    "    \r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "n_neighbor_sum([])"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "source": [
+    "def k_diff(list_1, k):\r\n",
+    "    result = []\r\n",
+    "    for idx, number_1 in enumerate(list_1[:-1]):\r\n",
+    "        for number_2 in list_1[idx + 1 :]:\r\n",
+    "            if abs(number_1 - number_2) == k:   # abs suabsoliutina reiksme, padaro, kad neigiamas skaicius taptu teigiamu\r\n",
+    "                result.append( (number_1, number_2))\r\n",
+    "    if not result:\r\n",
+    "        result = False\r\n",
+    "    return result"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "source": [
+    "k_diff([0, 2, 4, 8], 4)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[(0, 4), (4, 8)]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 33
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "source": [
+    "#geros_prekes = ['morka', 'obuolys', 'bananas', 'pomidoras', 'pienas', 'varske']\r\n",
+    "#blogos_prekes = ['traskuciai', 'saldainiai', 'energetinis', 'limonadas', 'guminukai']\r\n",
+    "alergenai = ['pienas', 'varske', 'grietine', 'jogurtas']\r\n",
+    "prekiu_gerumas = {\r\n",
+    "    'morka': 0.9,\r\n",
+    "    'obuolys': 0.8,\r\n",
+    "    'bananas': 0.7,\r\n",
+    "    'pomidoras': 0.7,\r\n",
+    "    'pienas':0.5,\r\n",
+    "    'varske':0.6,\r\n",
+    "    'traskuciai': -0.8,\r\n",
+    "    'saldainiai': -0.7,\r\n",
+    "    'energetinis': -1,\r\n",
+    "    'limonadas': -0.5,\r\n",
+    "    'guminukai': -0.6\r\n",
+    "}"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "alergenai = ['pienas', 'varske', 'grietine', 'jogurtas']\r\n",
+    "prekiu_gerumas = {\r\n",
+    "    'morka': 0.9,\r\n",
+    "    'obuolys': 0.8,\r\n",
+    "    'bananas': 0.7,\r\n",
+    "    'pomidoras': 0.7,\r\n",
+    "    'pienas':0.5,\r\n",
+    "    'varske':0.6,\r\n",
+    "    'traskuciai': -0.8,\r\n",
+    "    'saldainiai': -0.7,\r\n",
+    "    'energetinis': -1,\r\n",
+    "    'limonadas': -0.5,\r\n",
+    "    'guminukai': -0.6\r\n",
+    "}\r\n",
+    "\r\n",
+    "#geriausiu_prekiu_sarasas = []\r\n",
+    "#blogiausiu_prekiu_sarasas = []\r\n",
+    "alergenu_sarasas = []\r\n",
+    "\r\n",
+    "def prekiu_tikrintojas(prekiu_sarasas):\r\n",
+    "    geriausiu_prekiu_sarasas = []\r\n",
+    "    blogiausiu_prekiu_sarasas = []\r\n",
+    "    alergenu_sarasas = []\r\n",
+    "    krepselio_gerumas = 0\r\n",
+    "    for preke in prekiu_sarasas:\r\n",
+    "        if preke in prekiu_gerumas:\r\n",
+    "            krepselio_gerumas = krepselio_gerumas + (prekiu_gerumas[preke])\r\n",
+    "            if prekiu_gerumas[preke] >= 0 and preke not in alergenai:\r\n",
+    "                geriausiu_prekiu_sarasas.append((preke, prekiu_gerumas[preke] ))\r\n",
+    "            elif prekiu_gerumas[preke] < 0:\r\n",
+    "                blogiausiu_prekiu_sarasas.append((preke, prekiu_gerumas[preke]))\r\n",
+    "            elif preke in alergenai:\r\n",
+    "                alergenu_sarasas.append(preke)\r\n",
+    "        else:\r\n",
+    "            print(f'Informacijos apie {preke} neturime.')\r\n",
+    "                                  \r\n",
+    "    print(f'jusu krepselio gerumo koeficientas yra {krepselio_gerumas}')\r\n",
+    "    print(f'geriausios prekes jusu krepselyje: {geriausiu_prekiu_sarasas}. Geriausia preke yra', (max(geriausiu_prekiu_sarasas, key = lambda x: x[1])))\r\n",
+    "    print(f'blogiausios prekes jusu krepselyje: {blogiausiu_prekiu_sarasas}. Blogiausia preke yra', (min(blogiausiu_prekiu_sarasas, key = lambda x: x[1])))\r\n",
+    "    print(f'alergenai jusu krepselyje: {alergenu_sarasas}')\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "source": [
+    "prekiu_tikrintojas(['obuolys', 'pomidoras', 'varske', 'pienas','saldainiai', 'morka', 'guminukai'])"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "jusu krepselio gerumo koeficientas yra 2.2\n",
+      "geriausios prekes jusu krepselyje: [('obuolys', 0.8), ('pomidoras', 0.7), ('morka', 0.9)]. Geriausia preke yra ('morka', 0.9)\n",
+      "blogiausios prekes jusu krepselyje: [('saldainiai', -0.7), ('guminukai', -0.6)]. Blogiausia preke yra ('saldainiai', -0.7)\n",
+      "alergenai jusu krepselyje: ['varske', 'pienas']\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "class Bankomatas:\r\n",
+    "    def __init__(self, ID, pin, sask_likutis):\r\n",
+    "        self.id = ID\r\n",
+    "        self.pin = pin\r\n",
+    "        self.sask_likutis = sask_likutis\r\n",
+    "        \r\n",
+    "     def prisijungimas(self):\r\n",
+    "         vartotojo_id = input('Iveskite savo vartotojo id:')\r\n",
+    "         for \r\n",
+    "         if vartotojo_id == self.id:\r\n",
+    "             input('Iveskite pin koda:')\r\n",
+    "        else:\r\n",
+    "            print('Pin kodas neteisingas')\r\n",
+    "            break\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "    "
+   ],
+   "outputs": [],
    "metadata": {}
   }
  ],
