--- a/additional.ipynb
+++ b/additional.ipynb
@@ -387,6 +387,117 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "source": [
+    "l_1 = [4, 5, 5, 6]\r\n",
+    "l_2 = [5, \"6\", 7, 8]\r\n",
+    "set_1 = set(l_1)\r\n",
+    "set_2 = set(l_2)\r\n",
+    "print(set_1.intersection(set_2))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{5}\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "source": [
+    "x=5\r\n",
+    "for i in range(1, 10):\r\n",
+    "    x+=1\r\n",
+    "print(x)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "source": [
+    "d = {'foo' : 1, 'bar':2, 'baz' : 3}\r\n",
+    "while d:\r\n",
+    "    print(d.popitem())\r\n",
+    "print('Done.')"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "('baz', 3)\n",
+      "('bar', 2)\n",
+      "('foo', 1)\n",
+      "Done.\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "source": [
+    "getsum(11, 10)\r\n",
+    "def getsum(x, y):\r\n",
+    "    print(f'{x+y}')"
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'getsum' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_18280/2437377099.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgetsum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m11\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mgetsum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'{x+y}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'getsum' is not defined"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "source": [
+    "list_1 = [5, 10, 20, 30, 45, 55, 60, 70, 80, 90, 100]\r\n",
+    "def filter_list(list_to_filter, value):\r\n",
+    "    result_list= []\r\n",
+    "    for number in list_to_filter:\r\n",
+    "        if number% value == 0:\r\n",
+    "            result_list.append(number)\r\n",
+    "    return result_list\r\n",
+    "print(filter_list(list_1, 20))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[20, 60, 80, 100]\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
