--- a/lesson_2.ipynb
+++ b/lesson_2.ipynb
@@ -925,17 +925,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
     "kombinacijos = []\r\n",
     "for value_1 in a:\r\n",
     "    for value_2 in b:\r\n",
     "        for value_3 in c:\r\n",
     "            kombinacijos.append( [value_1, value_2, value_3] )\r\n",
-    "kombinacijos.sort(key=lanbda x: x[2], reverse=True)\r\n",
+    "kombinacijos.sort(key=lambda x: x[2], reverse=True)\r\n",
     "print (kombinacijos)\r\n"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2156/1059199670.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mkombinacijos\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mvalue_1\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mvalue_2\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mvalue_3\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m             \u001b[0mkombinacijos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mvalue_1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue_2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue_3\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -1058,7 +1070,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.9.2",
+   "version": "3.9.6",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -1070,10 +1082,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.2 64-bit"
+   "display_name": "Python 3.9.6 64-bit"
   },
   "interpreter": {
-   "hash": "28a8d0d51acbb5ec547b80c50a76f865b7f5e8a6e570f781e88891989fcd299d"
+   "hash": "1d0febc49e1fc15a3a396940b992e1b6cab9d0e3b3ca076f5f78bec92a9a951d"
   }
  },
  "nbformat": 4,
