--- a/lesson_3.ipynb
+++ b/lesson_3.ipynb
@@ -217,8 +217,8 @@
     "car1 = {\r\n",
     "\"brand\": \"Ford\",\r\n",
     "\"year\": 1992,\r\n",
-    "‘color’ = ‘red’\r\n",
-    "‘used’ = True\r\n",
+    "'color' : 'red',\r\n",
+    "'used' : True\r\n",
     "}\r\n",
     "car1.pop('brand')\r\n",
     "car1['year'] = None\r\n",
@@ -226,11 +226,10 @@
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid character '‘' (U+2018) (Temp/ipykernel_1888/3573488817.py, line 4)",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\MOKYTO~1\\AppData\\Local\\Temp/ipykernel_1888/3573488817.py\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    ‘color’ = ‘red’\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid character '‘' (U+2018)\n"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'year': None, 'color': 'red', 'used': True}\n"
      ]
     }
    ],
@@ -610,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "source": [
     "repetitive_count = {}\r\n",
     "for unique_word in word_set:\r\n",
@@ -624,9 +623,9 @@
     {
      "output_type": "error",
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_4724/1343795410.py, line 3)",
+     "evalue": "invalid syntax (Temp/ipykernel_12440/1323834926.py, line 3)",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\MOKYTO~1\\AppData\\Local\\Temp/ipykernel_4724/1343795410.py\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    repetitive_count.[unique_word] = word_list.count(unique_word)\u001b[0m\n\u001b[1;37m                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Justina\\AppData\\Local\\Temp/ipykernel_12440/1323834926.py\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    repetitive_count.[unique_word] = word_list.count(unique_word)\u001b[0m\n\u001b[1;37m                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -643,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "source": [
     "long_words = 0\r\n",
     "longest_word = ''\r\n",
@@ -651,19 +650,22 @@
     "for word in input_list:\r\n",
     "    if len(word) >= 10:\r\n",
     "        long_words += 1\r\n",
-    "    if len(word) > len(longest_word)\r\n",
+    "    if len(word) > len(longest_word):\r\n",
     "        longest_word = word\r\n",
-    "    if len(word) > len(shortest_word)\r\n",
+    "    if len(word) > len(shortest_word):\r\n",
     "       shortest_word\r\n",
     "\r\n"
    ],
    "outputs": [
     {
      "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_4724/1168899976.py, line 7)",
+     "ename": "NameError",
+     "evalue": "name 'input_list' is not defined",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\MOKYTO~1\\AppData\\Local\\Temp/ipykernel_4724/1168899976.py\"\u001b[1;36m, line \u001b[1;32m7\u001b[0m\n\u001b[1;33m    if len(word) > len(longest_word)\u001b[0m\n\u001b[1;37m                                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_12440/3756447844.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mlongest_word\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m''\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mshortest_word\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'a'\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m1000\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[1;32min\u001b[0m \u001b[0minput_list\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mword\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[0mlong_words\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'input_list' is not defined"
      ]
     }
    ],
@@ -725,7 +727,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.9.2",
+   "version": "3.9.6",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -737,10 +739,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.2 64-bit"
+   "display_name": "Python 3.9.6 64-bit"
   },
   "interpreter": {
-   "hash": "28a8d0d51acbb5ec547b80c50a76f865b7f5e8a6e570f781e88891989fcd299d"
+   "hash": "1d0febc49e1fc15a3a396940b992e1b6cab9d0e3b3ca076f5f78bec92a9a951d"
   }
  },
  "nbformat": 4,
