--- a/rezerv-sist-1/rezervacijos_sist.ipynb
+++ b/rezerv-sist-1/rezervacijos_sist.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "source": [
     "class Vieta:\r\n",
     "    def __init__(self, aukstas, kabinetas, darbo_vietos_nr, rezervaves_darb = None, rezervuota_diena = None):\r\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "source": [
     "from tkinter import Tk, Button, Label\r\n",
     "from tkcalendar import Calendar\r\n",
@@ -50,6 +50,15 @@
     "    def rezervuoti_vieta(self, pasirinkta_diena = None):\r\n",
     "        self.pasirinkta_diena = pasirinkta_diena\r\n",
     "        self.naujas_rezervaves_darbuotojas = input('Įrašykite savo vardą, pavardę')\r\n",
+    "\r\n",
+    "        #patikrinam kiek zodziu irasyta. Jei maziau nei 2, prašom įrašyti teisingą vardą ir pavardę\r\n",
+    "        zodziu_skaicius = len(self.naujas_rezervaves_darbuotojas.split())\r\n",
+    "        if zodziu_skaicius >= 2:\r\n",
+    "            print (f'Laba diena, {self.naujas_rezervaves_darbuotojas}!')\r\n",
+    "        else:\r\n",
+    "            print (f'Prašome įrašyti teisingą vardą ir pavardę')\r\n",
+    "            self.naujas_rezervaves_darbuotojas = input('Įrašykite savo vardą, pavardę')\r\n",
+    "            print (f'Laba diena {self.naujas_rezervaves_darbuotojas}')\r\n",
     "                      \r\n",
     "        # sukuriamas calendorius, kuriame galima pasirinkti norima rezervuoti dinput('Įrašykite savo vardą, pavardę')ata\r\n",
     "        ws_cal = Tk()\r\n",
@@ -58,7 +67,7 @@
     "        ws_cal.configure(bg=\"cyan\")\r\n",
     "        cal = Calendar(ws_cal, selectmode = \"day\", year = 2021, month = 9)\r\n",
     "        cal.pack(pady=20)\r\n",
-    "           \r\n",
+    "                          \r\n",
     "        def pasirinkti_diena():\r\n",
     "            diena = cal.get_date()\r\n",
     "            if diena is not None:\r\n",
@@ -67,8 +76,14 @@
     "                pasirinkti_diena()\r\n",
     "            return self.pasirinkta_diena, ws_cal.after(1000, lambda:ws_cal.destroy())\r\n",
     "\r\n",
+    "        \r\n",
+    "        # sukuriam mygtuką \"Pasirinkti\"\r\n",
     "        my_btn = Button(ws_cal, text=\"Pasirinkti\", command=pasirinkti_diena)\r\n",
     "        my_btn.pack(pady=20)\r\n",
+    "\r\n",
+    "        # sukuriam \"label\"\r\n",
+    "        pasirinkimasLb = Label(ws_cal, text=\"Prašome pasirinkti, kurią dieną norite rezervuoti darbo vietą\", bg='cyan')\r\n",
+    "        pasirinkimasLb.pack(before=cal, pady=20)\r\n",
     "\r\n",
     "        ws_cal.mainloop()\r\n",
     "\r\n",
@@ -83,20 +98,14 @@
     "                break\r\n",
     "        if not laisva_darbo_vieta:\r\n",
     "            print(f'Jūsų pasirinktą dieną laisvų darbo vietų nėra, prašome dirbti nuotoliniu būdu')\r\n",
-    "            #kita_diena = input('Jei norite pasirinkti kitą dieną, parašykite \"taip\"').lower()\r\n",
-    "            #if kita_diena == \"taip\":\r\n",
-    "              #  rezervuoti_vieta()\r\n",
-    "            #else:\r\n",
-    "                #break\r\n",
-    "\r\n",
-    "         \r\n"
+    "                    \r\n"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "source": [
     "# darbo vietų sąrašas\r\n",
     "darbo_vieta_1 = Vieta(1, 101, 1)\r\n",
@@ -113,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "source": [
     "sistema = RezervacijosSistema(\"Darbo vietų rezervavimo sistema\")\r\n",
     "\r\n",
@@ -142,14 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "source": [
     "# rezervuojame darbo vietą pasirinktai dienai\r\n",
     "sistema.rezervuoti_vieta()\r\n",
@@ -166,54 +168,33 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "a, Jūsų pasirinkta data yra: 9/6/21\n",
+      "Laba diena, j m!\n",
+      "j m, Jūsų pasirinkta data yra: 9/6/21\n",
       "Jums rezervuota darbo vieta: Nr. 1, kabinetas Nr. 101, aukštas Nr. 1\n",
-      "s, Jūsų pasirinkta data yra: 9/6/21\n",
+      "Laba diena, k l!\n",
+      "k l, Jūsų pasirinkta data yra: 9/6/21\n",
       "Jums rezervuota darbo vieta: Nr. 2, kabinetas Nr. 101, aukštas Nr. 1\n",
-      "d, Jūsų pasirinkta data yra: \n",
+      "Laba diena, mo ln!\n",
+      "mo ln, Jūsų pasirinkta data yra: 9/6/21\n",
       "Jums rezervuota darbo vieta: Nr. 3, kabinetas Nr. 203, aukštas Nr. 2\n",
-      "f, Jūsų pasirinkta data yra: 9/6/21\n",
+      "Laba diena, sv bn!\n",
+      "sv bn, Jūsų pasirinkta data yra: 9/6/21\n",
       "Jums rezervuota darbo vieta: Nr. 4, kabinetas Nr. 321, aukštas Nr. 3\n",
-      "g, Jūsų pasirinkta data yra: 9/6/21\n",
+      "Laba diena, lo pol!\n",
+      "lo pol, Jūsų pasirinkta data yra: 9/6/21\n",
       "Jums rezervuota darbo vieta: Nr. 5, kabinetas Nr. 321, aukštas Nr. 3\n",
-      "h, Jūsų pasirinkta data yra: 9/6/21\n",
+      "Laba diena, ck lm!\n",
+      "ck lm, Jūsų pasirinkta data yra: 9/6/21\n",
       "Jums rezervuota darbo vieta: Nr. 6, kabinetas Nr. 321, aukštas Nr. 3\n",
-      "j, Jūsų pasirinkta data yra: 9/6/21\n",
+      "Laba diena, zs cv!\n",
+      "zs cv, Jūsų pasirinkta data yra: 9/6/21\n",
       "Jums rezervuota darbo vieta: Nr. 7, kabinetas Nr. 412, aukštas Nr. 4\n",
-      "k, Jūsų pasirinkta data yra: 9/6/21\n",
-      "Jūsų pasirinktą dieną laisvų darbo vietų nėra, siūlome dirbti nuotoliniu būdu\n"
+      "Laba diena, bn mk!\n",
+      "bn mk, Jūsų pasirinkta data yra: 9/6/21\n",
+      "Jūsų pasirinktą dieną laisvų darbo vietų nėra, prašome dirbti nuotoliniu būdu\n"
      ]
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "source": [
-    "#import ipywidgets\r\n",
-    "\r\n",
-    "#date_picker = ipywidgets.DatePicker()\r\n",
-    "#date_picker\r\n",
-    "\r\n"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "\r\n"
-   ],
-   "outputs": [],
    "metadata": {}
   }
  ],
